resource-test-app/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: resource-test
  labels:
    name: resource-test
    app: resource-test-app
